Connect Spring with database in Java 9 :shipit: